--- a/lazycrud/templates/lazycrud/object_detail_with_related_list.html
+++ b/lazycrud/templates/lazycrud/object_detail_with_related_list.html
@@ -23,48 +23,7 @@
         </div>
         <hr>
     {% endif %}
-        <table class="table table-striped table-hover table-datatables"
-            {% if view.datatables_options %} data-datatables-options="{{ view.datatables_options }}"{% endif %}>
-            <thead>
-                <tr>
-                {% for name in view.related_list_fields %}
-                    <th>{{ view.model|fieldlabel:name }}</th>
-                {% endfor %}
-                {% if view.related_list_actions %}
-                    <th></th>
-                {% endif %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for o in related_list %}
-                {% if view.no_record_link %}
-                    <tr>
-                {% else %}
-                    <tr class="clickable_row"
-                    {% if view.detail_url %}
-                        data-url="{% url view.detail_url pk=o.pk %}"
-                    {% else %}
-                        data-url="{{ o.get_absolute_url }}"
-                    {% endif %}
-                    {% if view.detail_url_target %}
-                        data-target="{{ view.detail_url_target }}"
-                    {% endif %}
-                    >
-                {% endif %}
-                    {% for name in view.related_list_fields %}
-                        <td>{{ o|fieldvalue:name }}</td>
-                    {% endfor %}
-                    {% if view.related_list_actions %}
-                        <td class="actions">
-                        {% for action in view.related_list_actions %}
-                            <a class="btn btn-link" href="{% url action.url pk=o.pk %}">{% if action.icon %}<i class="fa fa-{{ action.icon }}"></i> {% endif %}{{ action.label }}</a>
-                        {% endfor %}
-                        </td>
-                    {% endif %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        {% include "lazycrud/_table.html" with object_model=view.related_model object_fields=view.related_list_fields object_list=related_list datatables_options=view.related_datatables_options object_url=view.related_detail_url object_url_target=view.related_detail_url_target object_actions=view.related_list_actions %}
     </div>
 </div>
 {% endblock %}
