--- a/lazycrud/templates/lazycrud/object_list.html
+++ b/lazycrud/templates/lazycrud/object_list.html
@@ -28,34 +28,7 @@
 {% endif %}
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped table-hover table-datatables"
-            {% if view.datatables_options %} data-datatables-options="{{ view.datatables_options }}"{% endif %}>
-            <thead>
-                <tr>
-                {% for name in view.fields %}
-                    <th>{{ view.model|fieldlabel:name }}</th>
-                {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for o in object_list %}
-                    <tr class="clickable_row"
-                    {% if view.detail_url %}
-                        data-url="{% url view.detail_url pk=o.pk %}"
-                    {% else %}
-                        data-url="{{ o.get_absolute_url }}"
-                    {% endif %}
-                    {% if view.detail_url_target %}
-                        data-target="{{ view.detail_url_target }}"
-                    {% endif %}
-                    >
-                    {% for name in view.fields %}
-                        <td>{{ o|fieldvalue:name }}</td>
-                    {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        {% include "lazycrud/_table.html" with object_model=view.model object_fields=view.fields object_list=object_list datatables_options=view.datatables_options object_url=view.detail_url object_url_target=view.detail_url_target object_actions=view.list_actions %}
     </div>
 </div>
 {% endblock %}
