--- a/lazycrud/templates/lazycrud/object_detail_with_related_list.html
+++ b/lazycrud/templates/lazycrud/object_detail_with_related_list.html
@@ -23,7 +23,7 @@
         </div>
         <hr>
     {% endif %}
-        {% include "lazycrud/_table.html" with object_model=view.related_model object_fields=view.related_list_fields object_list=related_list datatables_options=view.related_datatables_options object_url=view.related_detail_url object_url_target=view.related_detail_url_target object_actions=view.related_list_actions %}
+        {% include "lazycrud/_table.html" with table_classes=view.related_table_classes object_model=view.related_model object_fields=view.related_list_fields object_list=related_list datatables_options=view.related_datatables_options object_url=view.related_detail_url object_url_target=view.related_detail_url_target object_actions=view.related_list_actions %}
     </div>
 </div>
 {% endblock %}
