--- a/lazycrud/templates/lazycrud/object_detail.html
+++ b/lazycrud/templates/lazycrud/object_detail.html
@@ -7,7 +7,11 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">{{ object }}</h1>
+        <h1 class="page-header">
+        {% block page_header %}
+            {{ object }}
+        {% endblock page_header %}
+        </h1>
     </div>
 </div>
 <div class="row">
