--- a/lazycrud/templates/lazycrud/object_list.html
+++ b/lazycrud/templates/lazycrud/object_list.html
@@ -30,9 +30,14 @@
 </div>
 <hr>
 {% endif %}
+
+{% block pre_table %}{% endblock %}
+
 <div class="row">
     <div class="col-md-12">
         {% include "lazycrud/_table.html" with table_classes=view.table_classes object_model=view.model object_fields=view.fields object_list=object_list datatables_options=view.datatables_options object_url=view.detail_url object_url_target=view.detail_url_target object_actions=view.list_actions %}
     </div>
 </div>
+
+{% block post_table %}{% endblock %}
 {% endblock %}
