--- a/lazycrud/templates/lazycrud/object_detail.html
+++ b/lazycrud/templates/lazycrud/object_detail.html
@@ -34,7 +34,7 @@
 <hr>
 <div class="row">
     {% block left_col %}
-    <div class="{{ view.left_col_class|default='col-md-6' }}">
+    <div class="{{ view.left_col_class|default:'col-md-6' }}">
         <dl class="dl-horizontal">
         {% for name in view.fields %}
             {{ object|dl_item:name }}
