i18n for dataTables with languages en, it, es, fr, de

--- a/lazycrud/templates/lazycrud/_datatables_js.html
+++ b/lazycrud/templates/lazycrud/_datatables_js.html
@@ -3,4 +3,4 @@
 <script src="{% static 'lazycrud/js/dataTables/datatables.min.js' %}"></script>
 <script src="{% static 'lazycrud/js/dataTables/moment.min.js' %}"></script>
 <script src="{% static 'lazycrud/js/dataTables/datetime-moment.js' %}"></script>
-<script src="{% static 'lazycrud/js/object_list.js' %}"></script>
+<script id="object-list-script" src="{% static 'lazycrud/js/object_list.js' %}"></script>
