--- a/lazycrud/templates/lazycrud/_datatables_css.html
+++ b/lazycrud/templates/lazycrud/_datatables_css.html
@@ -2,3 +2,6 @@
 
 <link href="{% static 'lazycrud/css/datatables.min.css' %}" rel="stylesheet">
 <link href="{% static 'lazycrud/css/dataTables.fontAwesome.css' %}" rel="stylesheet">
+{% if view.fixed_header %}
+<link href="{% static 'lazycrud/css/fixedHeader.dataTables.min.css' %}" rel="stylesheet">
+{% endif %}
