--- a/lazycrud/templates/lazycrud/object_form.html
+++ b/lazycrud/templates/lazycrud/object_form.html
@@ -75,10 +75,10 @@
     <div class="col-md-12">
     {% block form_content %}
         <form class="form-horizontal" role="form" method="POST" action="" {% if form.is_multipart %}enctype="multipart/form-data"{% endif %}>
-        {% if form.helper %}
-            {% crispy form %}
-        {% else %}
+        {% if form.helper == None %}
             {% crispy form form_horizontal_helper %}
+        {% else %}
+            {% crispy form %}
         {% endif %}
             <div class="form-actions">
                 <div class="col-lg-8 col-lg-offset-4">
