--- a/lazycrud/templates/lazycrud/object_form_with_related_formset.html
+++ b/lazycrud/templates/lazycrud/object_form_with_related_formset.html
@@ -1,5 +1,6 @@
 {% extends "lazycrud/object_form.html" %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
 {% block form_content %}
 
@@ -14,7 +15,7 @@
             {% crispy formset table_inline_formset %}
             <div class="form-actions">
                 <div class="col-lg-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">Salva</button>
+                    <button type="submit" class="btn btn-primary btn-lg">{% trans 'Salva' %}</button>
                 </div>
             </div>
         </div> <!-- /.col-lg-* -->
