--- a/lazycrud/templates/lazycrud/object_confirm_delete.html
+++ b/lazycrud/templates/lazycrud/object_confirm_delete.html
@@ -1,13 +1,13 @@
 {% extends view.base_template|default:"base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Conferma eliminazione' %}{% endblock %}
+{% block title %}{% trans 'Confirm delete' %}{% endblock %}
 
 {% block content %}
 
 <div class="row">
     <div class="col-lg-12">
-        <h2 class="page-header">{% trans 'Sei sicuro?' %}</h2>
+        <h2 class="page-header">{% trans 'Are you sure?' %}</h2>
     </div> <!-- /.col-lg-12 -->
 </div> <!-- /.row -->
 
@@ -15,8 +15,8 @@
     <div class="col-lg-12">
         <form class="form-horizontal" role="form" method="POST" action="">
             {% csrf_token %}
-            <button type="submit" class="btn btn-primary">{% trans 'Elimina' %} {{ object }}</button>
-            <button type="button" class="btn btn-default" onclick="window.history.back();">{% trans 'Annulla' %}</button>
+            <button type="submit" class="btn btn-primary">{% trans 'Delete' %} {{ object }}</button>
+            <button type="button" class="btn btn-default" onclick="window.history.back();">{% trans 'Cancel' %}</button>
         </form>
     </div> <!-- /.col-lg-12 -->
 </div> <!-- /.row -->
