--- a/lazycrud/templates/lazycrud/object_form_with_related_formset.html
+++ b/lazycrud/templates/lazycrud/object_form_with_related_formset.html
@@ -15,7 +15,7 @@
             {% crispy formset table_inline_formset %}
             <div class="form-actions">
                 <div class="col-lg-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">{% trans 'Salva' %}</button>
+                    <button type="submit" class="btn btn-primary btn-lg">{% trans 'Save' %}</button>
                 </div>
             </div>
         </div> <!-- /.col-lg-* -->
