Do not use staticfiles template tag (dropped in Django 3.0)

--- a/lazycrud/templates/lazycrud/object_form.html
+++ b/lazycrud/templates/lazycrud/object_form.html
@@ -1,5 +1,5 @@
 {% extends view.base_template|default:"base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% load lazycrud %}
 {% load i18n %}
