--- a/lazycrud/templates/lazycrud/_datatables_js.html
+++ b/lazycrud/templates/lazycrud/_datatables_js.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 
 <script src="{% static 'lazycrud/js/dataTables/datatables.min.js' %}"></script>
 <script src="{% static 'lazycrud/js/dataTables/moment.min.js' %}"></script>
