--- a/lazycrud/templates/lazycrud/_table.html
+++ b/lazycrud/templates/lazycrud/_table.html
@@ -1,4 +1,5 @@
 {% load lazycrud %}
+{% load i18n %}
 
 <table class="table {% if table_classes %}{{ table_classes }}{% else %}table-striped table-hover table-datatables{% endif %}"
     {% if datatables_options %} data-datatables-options="{{ datatables_options }}"{% endif %}>
@@ -34,6 +35,15 @@
                 {% for action in object_actions %}
                     <a class="btn btn-link" href="{% url action.url pk=o.pk %}">{% if action.icon %}<i class="fa fa-{{ action.icon }}"></i> {% endif %}{{ action.label }}</a>
                 {% endfor %}
+                </td>
+            {% elif o.get_update_url or o.get_delete_url %}
+                <td class="actions">
+                {% if o.get_update_url %}
+                    <a class="btn btn-link" href="{{ o.get_update_url }}"><i class="fa fa-edit"></i> {% trans "Edit" %}</a>
+                {% endif %}
+                {% if o.get_delete_url %}
+                    <a class="btn btn-link" href="{{ o.get_delete_url }}"><i class="fa fa-times"></i> {% trans "Delete" %}</a>
+                {% endif %}
                 </td>
             {% endif %}
             </tr>
