--- a/lazycrud/templates/lazycrud/object_form_with_related_formset.html
+++ b/lazycrud/templates/lazycrud/object_form_with_related_formset.html
@@ -7,12 +7,20 @@
 <form role="form" method="POST" action="" {% if form.is_multipart %}enctype="multipart/form-data"{% endif %}>
     <div class="row">
         <div class="col-lg-6 col-lg-offset-2 form-horizontal">
+        {% if form.helper == None %}
             {% crispy form form_horizontal_helper %}
+        {% else %}
+            {% crispy form %}
+        {% endif %}
         </div> <!-- /.col-lg-* -->
     </div> <!-- /.row -->
     <div class="row">
         <div class="col-lg-12">
+        {% if formset.helper == None %}
             {% crispy formset table_inline_formset %}
+        {% else %}
+            {% crispy formset %}
+        {% endif %}
             <div class="form-actions">
                 <div class="col-lg-12 text-center">
                     <button type="submit" class="btn btn-primary btn-lg">{% trans 'Save' %}</button>
