New table_headers option to _table.html template.

--- a/lazycrud/templates/lazycrud/_table.html
+++ b/lazycrud/templates/lazycrud/_table.html
@@ -5,9 +5,15 @@
     {% if datatables_options %} data-datatables-options="{{ datatables_options }}"{% endif %}>
     <thead>
         <tr>
+    {% if table_headers %}
+        {% for header in table_headers %}
+            <th>{{ header }}</th>
+        {% endfor %}
+    {% else %}
         {% for name in object_fields %}
             <th>{{ object_model|fieldlabel:name }}</th>
         {% endfor %}
+    {% endif %}
         {% if object_actions is not None %}
             <th></th>
         {% endif %}
