--- a/lazycrud/templates/lazycrud/_table.html
+++ b/lazycrud/templates/lazycrud/_table.html
@@ -4,20 +4,7 @@
 <table class="table {% if table_classes %}{{ table_classes }}{% else %}table-striped table-hover table-datatables{% endif %}"
     {% if datatables_options %} data-datatables-options="{{ datatables_options }}"{% endif %}>
     <thead>
-        <tr>
-    {% if table_headers %}
-        {% for header in table_headers %}
-            <th>{{ header }}</th>
-        {% endfor %}
-    {% else %}
-        {% for name in object_fields %}
-            <th>{{ object_model|fieldlabel:name }}</th>
-        {% endfor %}
-    {% endif %}
-        {% if object_actions is not None %}
-            <th></th>
-        {% endif %}
-        </tr>
+        {% include "lazycrud/_headers_row.html" %}
     </thead>
     <tbody>
         {% for o in object_list %}
@@ -52,4 +39,9 @@
             </tr>
         {% endfor %}
     </tbody>
+{% if show_table_footer %}
+    <tfoot>
+        {% include "lazycrud/_headers_row.html" %}
+    </tfoot>
+{% endif %}
 </table>
